"Distributed Point Functions"

module(
    name = "distributed_point_functions",
    # Note: the publish-to-BCR app will patch this line to stamp the version being published.
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(
    name = "rules_license",
    version = "0.0.7",
)

bazel_dep(
    name = "rules_proto",
    version = "6.0.0-rc2",
)

bazel_dep(
    name = "rules_go",
    version = "0.46.0",
    repo_name = "io_bazel_rules_go",
)

bazel_dep(
    name = "rules_cc",
    version = "0.0.9",
)

bazel_dep(
    name = "protobuf",
    version = "27.0",
    repo_name = "com_google_protobuf",
)

bazel_dep(
    name = "abseil-cpp",
    version = "20230802.0",
)

bazel_dep(
    name = "boringssl",
    version = "0.0.0-20240126-22d349c",
)

bazel_dep(
    name = "googletest",
    version = "1.14.0",
    repo_name = "com_github_google_googletest",
)

bazel_dep(
    name = "google_benchmark",
    version = "1.8.3",
    repo_name = "com_github_google_benchmark",
)

bazel_dep(
    name = "gflags",
    version = "2.2.2",
    repo_name = "com_github_gflags_gflags",
)

bazel_dep(
    name = "glog",
    version = "0.7.0",
    repo_name = "com_github_google_glog",
)

bazel_dep(
    name = "rules_rust",
    version = "0.48.0",
)

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(edition = "2021")

crate = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = ["//:Cargo.toml"],
)
use_repo(crate, "crates")
